--- a/#src/scss/ui-kit/modal/_modal.scss
+++ b/#src/scss/ui-kit/modal/_modal.scss
@@ -8,6 +8,7 @@
   left: 0;
   z-index: 2050;
   outline: 0;
+  display: none;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.8);
   -webkit-overflow-scrolling: touch;
